fix: unsuitable `z-index` for `<a>` elements

--- a/src/styles/essence.scss
+++ b/src/styles/essence.scss
@@ -96,6 +96,12 @@ article .content {
       color: $col-text-deut;
     }
   }
+
+  blockquote {
+    padding-left: 0.75em;
+    color: $col-text-deut;
+    border-left: 1.5px solid $col-line;
+  }
 }
 
 
@@ -162,6 +168,7 @@ article .content {
 
 .footnotes {
   padding-top: 2rem;
+  padding-left: 1em;
 
   hr {
     display: none;
